<resources>
    <string name="app_name">ParcelPocket</string>
    <string name="title_activity_dashboad">Dashboad</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">abc@gmail.com</string>
    <string name="nav_header_desc">More</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_calculator">Shipping Calculator</string>
    <string name="menu_createshipment">Create Shipment</string>
    <string name="menu_shipment">Shipment</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_help">Help</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_pp">Privacy Policy</string>
    <string name="menu_share">Share Application</string>
    <string name="menu_logout">Log Out</string>

</resources>