<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pro"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_ship_cal"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_ship_cre"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_createshipment"/>
        <item
            android:id="@+id/nav_ship"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_shipment"/>
        <item
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_wallet"/>
        <item
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_help"/>

        <item
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_faq"/>

        <item
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_pp"/>

        <item
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_share"/>

        <item
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout"/>





    </group>
</menu>